--- a/my-app/src/App.module.css
+++ b/my-app/src/App.module.css
@@ -13,6 +13,23 @@
 	color: white;
 }
 
+.form {
+	display: grid;
+	gap: 1rem;
+	place-items: center;
+}
+
 .errorLabel {
 	color: red;
+}
+
+input {
+	font-size: 1rem;
+	padding: 0.5rem;
+}
+
+.button {
+	height: 2rem;
+	width: 5rem;
+	font-size: 1rem;
 }
