--- a/my-app/src/App.module.css
+++ b/my-app/src/App.module.css
@@ -1,35 +1,18 @@
-.app {
-	text-align: center;
-}
-
 .header {
 	background-color: #282c34;
 	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+
 	font-size: calc(10px + 2vmin);
 	color: white;
 }
 
-.form {
+h1 {
+	text-align: center;
+}
+
+.label {
 	display: grid;
+	grid-template-columns: 1fr 1fr;
 	gap: 1rem;
-	place-items: center;
-}
-
-.errorLabel {
-	color: red;
-}
-
-input {
-	font-size: 1rem;
-	padding: 0.5rem;
-}
-
-.button {
-	height: 2rem;
-	width: 5rem;
-	font-size: 1rem;
+	padding: 1rem;
 }
