--- a/my-app/src/App.module.css
+++ b/my-app/src/App.module.css
@@ -1,7 +1,6 @@
 .header {
 	background-color: #282c34;
 	min-height: 100vh;
-
 	font-size: calc(10px + 2vmin);
 	color: white;
 }
@@ -10,9 +9,54 @@ h1 {
 	text-align: center;
 }
 
-.label {
+.content {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	gap: 1rem;
+}
+
+.label {
+	display: flex;
+	max-width: 100%;
+	justify-content: space-between;
 	padding: 1rem;
+}
+
+.checkbox {
+	width: 1rem;
+	height: 1rem;
+	align-self: center;
+	margin: 1rem;
+}
+
+.checked {
+	text-decoration: line-through;
+}
+
+.button {
+	width: 7rem;
+	height: 2.5rem;
+	font-size: 1rem;
+	border-radius: 10px;
+	border: none;
+	cursor: pointer;
+	margin: 1.5rem;
+}
+
+.searchBar {
+	font-size: 1.1rem;
+	padding: 0.5rem;
+}
+
+.buttonGroup {
+	width: 4.5rem;
+	padding: 0;
+}
+
+.editButton {
+	width: 4.5rem;
+	height: 1.7rem;
+	font-size: 1rem;
+	border-radius: 10px;
+	border: none;
+	cursor: pointer;
 }
